fix(section): change `search_container` CSS contain property from `content` to `style` to fix overflow issues

--- a/core/section/css/section.less
+++ b/core/section/css/section.less
@@ -11,7 +11,7 @@
 
 	// shared
 	>.search_container {
-		contain: content;
+		contain: style;
 		width: 100%;
 		position: relative;
 
